applications/taptech-crm/overlays/prod/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taptech-crm
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests: {cpu: 250m, memory: 1Gi}
            limits:   {cpu: "1", memory: 2Gi}
